# crop_line

./: .ycm_extra_conf.py  README.md  area_coverage.pc
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/follow_crop/: angle.h  pos.h
devel/include/line_follower/: pos.h
devel/include/opencv_apps/: EdgeDetectionConfig.h  FaceRecognitionConfig.h  HoughCirclesConfig.h  HoughLinesConfig.h  LKFlowConfig.h  PyramidsConfig.h  SmoothingConfig.h  ThresholdConfig.h
devel/lib/crop/: build_roi  count_pixels  detect_line_end  edge_detect  line  line06  line061  line11  line1210  line19  plant_row  pro_image  test_class_variables  test_contour  test_crop_line  test_crow  test_cut  test_cut_contour  test_czty  test_fitting_straight_line  test_focus  test_gray  test_otsu  test_two_line
devel/lib/follow_crop/: detect  detect02  read_img_send  robot_motion_node  robot_pid_node  start_detect_crop02  start_detect_crop03
devel/lib/line_follower/: crop_row
devel/lib/path_planning/: distance_point05  distance_point06  distance_points  distance_points02  distance_points03  distance_points04  gps_Gauss  plan_point01  plan_point02
devel/lib/pkgconfig/: area_coverage.pc  camera.pc  crop.pc  crop_line.pc  follow_crop.pc  opencv_apps.pc  path_planning.pc  start_camera.pc  take_pictures.pc  test_dir_c_cpp.pc
devel/lib/python2.7/dist-packages/follow_crop/msg/: __init__.py  _angle.py  _pos.py
devel/lib/python2.7/dist-packages/line_follower/msg/: _pos.py
devel/lib/python2.7/dist-packages/opencv_apps/cfg/: EdgeDetectionConfig.py  FaceRecognitionConfig.py  HoughCirclesConfig.py  HoughLinesConfig.py  PyramidsConfig.py  SmoothingConfig.py  ThresholdConfig.py
devel/lib/take_pictures/: laptop_take_pictures  take_auto_pictures  take_pictures
devel/lib/test_dir_c_cpp/: main
devel/share/area_coverage/cmake/: area_coverageConfig.cmake
devel/share/camera/cmake/: cameraConfig.cmake
devel/share/common-lisp/ros/follow_crop/msg/: _package.lisp  _package_angle.lisp  _package_pos.lisp  angle.lisp  follow_crop-msg.asd  pos.lisp
devel/share/common-lisp/ros/line_follower/msg/: _package.lisp  _package_pos.lisp  line_follower-msg.asd  pos.lisp
devel/share/crop/cmake/: crop-msg-extras.cmake  crop-msg-paths.cmake  cropConfig.cmake
devel/share/crop_line/cmake/: crop_line-msg-extras.cmake  crop_line-msg-paths.cmake  crop_lineConfig.cmake
devel/share/follow_crop/cmake/: follow_crop-msg-extras.cmake  follow_crop-msg-paths.cmake  follow_cropConfig.cmake
devel/share/gennodejs/ros/follow_crop/msg/: _index.js  angle.js  pos.js
devel/share/gennodejs/ros/line_follower/msg/: pos.js
devel/share/line_follower/cmake/: line_follower-msg-paths.cmake
devel/share/opencv_apps/cmake/: opencv_apps-msg-extras.cmake  opencv_apps-msg-paths.cmake  opencv_appsConfig.cmake
devel/share/path_planning/cmake/: path_planningConfig.cmake
devel/share/roseus/ros/crop/: manifest.l
devel/share/roseus/ros/follow_crop/: manifest.l
devel/share/roseus/ros/follow_crop/msg/: angle.l  pos.l
devel/share/roseus/ros/line_follower/: manifest.l
devel/share/roseus/ros/line_follower/msg/: pos.l
devel/share/start_camera/cmake/: start_cameraConfig.cmake
devel/share/take_pictures/cmake/: take_picturesConfig.cmake
devel/share/test_dir_c_cpp/cmake/: test_dir_c_cppConfig.cmake
src/area_coverage/: CMakeLists.txt  package.xml
src/area_coverage/src/: a.py  area_pathplan.py
src/crop/: CMakeLists.txt  package.xml
src/crop/include/: CornerDetector.h  SusanCornerDetector.h  linedetect.hpp  susan.h
src/crop/node/: gray.py
src/crop/src/: CornerDetector.cpp  SusanCornerDetector.cpp  build_roi.cpp  build_roi.txt  count_pixels.cpp  detect_line_end.cpp  detect_line_end.txt  edge_detect.cpp  line.cpp  line06.cpp  line06.txt  line061.cpp  line061.txt  line11.cpp  line11.txt  line1210.cpp  line19.cpp  line19.txt  main_pic.cpp  plant_row.cpp  pro_image.cpp  susan.cpp  test_class_variables.cpp  test_contour.cpp  test_crop_line.cpp  test_cut.cpp  test_cut_contour.cpp  test_czty.cpp  test_czty.txt  test_fitting_straight_line.cpp  test_focus.cpp  test_gray.cpp  test_line_ros.cpp  test_otsu.cpp  test_two_line.cpp
src/follow_crop/: CMakeLists.txt  package.xml
src/follow_crop/include/: line_detect.hpp  pid.h  robot.hpp
src/follow_crop/launch/: detect_crop_line.launch
src/follow_crop/src/: README.txt  detect02.cpp  linedetect_pro.cpp  pid.c  read_img_send.cpp  robot_control.cpp  robot_motion_node.cpp  robot_pid_node.cpp  start_detect_crop.cpp  start_detect_crop02.cpp  start_detect_crop02.txt  start_detect_crop03.cpp  start_detect_crop03.txt  start_detect_crop04.txt
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/node/: gps_Gauss.py  gps_Gauss.txt  gps_Gauss02.py  matlabplot.txt  show_gps_matlabplot.py  show_gps_point.py  show_gps_point02.py  show_gps_point05.py  try.py
src/path_planning/src/: ReadMe.txt  distance_point05.cpp  distance_point06.cpp  distance_points.py  distance_points01.cpp  distance_points02.cpp  distance_points03.cpp  distance_points04.cpp  gps_Gauss.cpp  plan_point01.cpp  plan_point02.cpp
src/start_camera/: CMakeLists.txt  ReadMe.txt  package.xml
src/start_camera/calibration_file/: head_camera.yaml
src/start_camera/launch/: usb_cam.launch  uvc_camera.launch
src/take_pictures/: CMakeLists.txt  package.xml  readme.txt
src/take_pictures/nodes/: auto7.py  auto8.py  auto9.py  auto_take_pic.py  now.py  take_pic.py
src/take_pictures/src/: laptop_take_pictures.cpp  take_auto_pictures.cpp  take_pictures.cpp
